--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </section>
 
-  <section class="content-sections">
+  <section class="content-section">
     <div class="image">
       <div class="image-container">
         <img src="assests/Mahal.jpg" alt="Image of Taj Mahal">
