--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="text">
       <h2>ABOUT US</h2>
       <p>We are the leading firm in the world which provides these service of touring in India on international level.</p>
-      <button>Learn More</button>
+      <button class="text button">Learn More</button>
     </div>
   </section>
 
